--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
             <ul>
                 <li>
                     <a href="./news.html">最新消息</a>
-
                 </li>
                 <li>
                     <a href="./aboutus.html">關於品牌</a>
-
                 </li>
                 <li>
                     <a href="./classic-beer.html">啤酒介紹</a>
@@ -51,6 +49,7 @@
                 </a>
             </div>
         </nav>
+        <label for="menu-switch" class="backdrop"></label>
     </header>
     <!-- 立即訂位開始 -->
     <div class="booking-btn">
@@ -76,9 +75,9 @@
     <div class="news">
         <h1>最新消息</h1>
     </div>
-    <div class="news-card-container">
-        <!-- 活動卡片區按鈕開始 -->
-        <div class="arrow">
+    <!-- <div class="news-card-container"> -->
+    <!-- 活動卡片區按鈕開始 -->
+    <!-- <div class="arrow">
             <div class="arrow-left">
                 <i class="fa-solid fa-angle-left arrow-left"></i>
             </div>
@@ -87,9 +86,9 @@
             <div href="#" class="arrow-right">
                 <i class="fa-solid fa-angle-right"></i>
             </div>
-        </div>
-        <!-- 活動卡片區按鈕結束 -->
-        <div class="news-card">
+        </div> -->
+    <!-- 活動卡片區按鈕結束 -->
+    <!-- <div class="news-card">
             <a href="./news.html">
                 <div class="card-pic">
                     <img src="./images/index_newscele.png" alt="">
@@ -150,7 +149,7 @@
                 </div>
             </a>
         </div>
-    </div>
+    </div> -->
     <!-- 活動卡片區結束 -->
 
     <!-- 首頁影片區 -->
@@ -166,7 +165,7 @@
     <div class="food">
         <h2>人生苦短·再來一碗</h2>
     </div>
-    <div class="food-card-container">
+    <!--  <div class="food-card-container">
         <div class="food-card">
             <a href="./food.html">
                 <div class="card-pic">
@@ -211,9 +210,9 @@
                     #花椰菜米佐鮭魚排
                 </div>
         </div>
-        </a>
-    </div>
+    </div>-->
     <!-- 食物卡片區結束 -->
+
     <!-- 釀酒廠介紹開始 -->
     <article class="brewery">
         <div class="pic">
@@ -237,6 +236,7 @@
         </div>
     </article>
     <!-- 釀酒廠介紹結束 -->
+
     <!-- 好評推薦區 -->
     <div class="feedback">
         <h2>MIU 好評推薦</h2>
