--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -76,7 +76,6 @@
                         Meat Lovers Platter
                     </span>
                 </h2>
-
                 <div class="order-btn">
                     <i class="fa-solid fa-circle-minus"></i>
                     <p class="count">1</p>
@@ -180,12 +179,12 @@
         </form>
     </div>
     <div class="btn">
-        <div class="back">
-            <a href="./takeout.html">返回</a>
-        </div>
-        <div class="next">
-            <a href="#">確認</a>
-        </div>
+        <!-- <div class="back"> -->
+        <a class="back" href="./takeout.html">返回</a>
+        <!-- </div> -->
+        <!-- <div class="next"> -->
+        <a class="next" href="#">確認</a>
+        <!-- </div> -->
     </div>
     <!-- 地址表單區結束 -->
     <!-- footer開始 -->
