--- a/news.html
+++ b/news.html
@@ -60,10 +60,6 @@
         </a>
     </div>
     <!-- 立即訂位結束 -->
-    <!-- 跑馬燈區 -->
-    <div class="marquee">
-        <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
-    </div>
     <div class="top">
         <h1>
             NEWS
@@ -85,7 +81,7 @@
             <a href="#">
                 <img src="./images/news_craftbeer.png" alt="精釀啤酒">
                 <span>
-                    一塊體驗精釀啤酒的奧妙吧!
+                    一起體驗精釀啤酒的奧妙吧!
                 </span>
             </a>
         </div>
