--- a/takeout.html
+++ b/takeout.html
@@ -60,13 +60,10 @@
         </a>
     </div>
     <!-- 立即訂位結束 -->
-    <!-- 中間公告區開始 -->
+    <!-- 中間公告區&Banner開始 -->
     <div class="banner">
         <div class="pic">
             <img src="./images/takeout_banner.png" alt="#">
-        </div>
-        <div class="txt">
-            <p>美味一把抓</p>
         </div>
     </div>
     <div class="description">
@@ -77,7 +74,7 @@
             可外帶餐點如下方清單，外帶滿2000元即贈5張小麥啤酒券
         </p>
     </div>
-    <!-- 中間公告區結束 -->
+    <!-- 中間公告區&Banner結束 -->
     <!-- 食物卡片區開始 -->
     <div class="food-card-container">
         <div class="card">
@@ -294,7 +291,7 @@
                 <img src="./images/takeout_spicy.png" alt="#">
             </div>
             <div class="txt">
-                <h2>椒香雞肉炒時蔬</h2>
+                <h2>雞肉炒時蔬</h2>
                 <span>Spicy Chicken Stir Fry</span>
             </div>
             <div class="btn">
@@ -317,6 +314,7 @@
             <a href="index.html" target="_blank">
                 <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
             </a>
+            <p>本網站為緯育TibaMe前端班第86期學員專題作品，<br>本平台僅供學習、展示之用。</p>
         </div>
         <div class="footer txt">
             <ul>
