fix footer logo link

--- a/aboutus.html
+++ b/aboutus.html
@@ -95,7 +95,7 @@
     <!-- 立即訂位結束 -->
     <!-- 上半部開始 -->
     <div class="movie">
-        <video src="./images/about_movie.mp4" autoplay loop muted></video>
+        <video src="./images/about_movie.mp4" autoplay loop muted type="video/mp4"></video>
     </div>
     <section class="container">
         <div class="slogn">
@@ -223,7 +223,7 @@
     <!-- footer開始 -->
     <footer>
         <div class="footer-pic">
-            <a href="index.html" target="_blank">
+            <a href="index.html">
                 <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
             </a>
             <p>本網站為緯育TibaMe前端班第86期學員專題作品，<br>本平台僅供學習、展示之用。</p>
