--- a/index.html
+++ b/index.html
@@ -107,84 +107,8 @@
     <!----------- 首頁_banner&跑馬燈結束 ---------->
     <!-- 活動卡片區開始 -->
     <div class="news">
-        <h1>最新消息</h1>
+        <h1>此區塊籌備中</h1>
     </div>
-    <!-- <div class="news-card-container"> -->
-    <!-- 活動卡片區按鈕開始 -->
-    <!-- <div class="arrow">
-            <div class="arrow-left">
-                <i class="fa-solid fa-angle-left arrow-left"></i>
-            </div>
-        </div>
-        <div class="arrow">
-            <div href="#" class="arrow-right">
-                <i class="fa-solid fa-angle-right"></i>
-            </div>
-        </div> -->
-    <!-- 活動卡片區按鈕結束 -->
-    <!-- <div class="news-card">
-            <a href="./news.html">
-                <div class="card-pic">
-                    <img src="./images/index_newscele.png" alt="">
-                </div>
-                <div class="card-txt">
-                    <h2>
-                        上班族小確幸！<br>平日午餐享小杯啤酒任選一杯
-                    </h2>
-                </div>
-                <div class="tag">
-                    2023/07/07
-                </div>
-            </a>
-        </div>
-        <div class="news-card">
-            <a href="./news.html">
-                <div class="card-pic">
-                    <img src="./images/index_newsfriends.png" alt="">
-                </div>
-                <div class="card-txt">
-                    </h2>
-                    好友揪好友，一起涼一下！<br>
-                    聚會首選 Miu Beer！
-                    </h2>
-                </div>
-                <div class="tag">
-                    2023/08/08
-                </div>
-            </a>
-        </div>
-        <div class="news-card">
-            <a href="./news-page.html">
-                <div class="card-pic">
-                    <img src="./images/index_newsbeer.png" alt="">
-                </div>
-                <div class="card-txt">
-                    </h2>
-                    每週五晚間八點，參加啤酒大賽，第一名可得啤酒券套票組
-                    </h2>
-                </div>
-                <div class="tag">
-                    2023/09/09
-                </div>
-            </a>
-        </div>
-        <div class="news-card side">
-            <a href="./news-page.html">
-                <div class="card-pic">
-                    <img src="./images/index_newsbeer.png" alt="">
-                </div>
-                <div class="card-txt">
-                    </h2>
-                    每週五晚間八點，參加啤酒大賽，第一名可得啤酒券套票組
-                    </h2>
-                </div>
-                <div class="tag">
-                    2023/09/09
-                </div>
-            </a>
-        </div>
-    </div> -->
-    <!-- 活動卡片區結束 -->
 
     <!-- 首頁影片區 -->
     <div class="draft-beer">
@@ -197,7 +121,7 @@
 
     <!-- 食物卡片區開始 -->
     <div class="food">
-        <h2>人生苦短·再來一碗</h2>
+        <h2>此區塊籌備中</h2>
     </div>
     <!--  <div class="food-card-container">
         <div class="food-card">
@@ -388,7 +312,7 @@
         </div>
     </div>
     <!-- footer結束 -->
-    <script src="./js/all.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
