--- a/location.html
+++ b/location.html
@@ -155,7 +155,7 @@
     <!-- footer開始 -->
     <footer>
         <div class="footer-pic">
-            <a href="index.html" target="_blank">
+            <a href="index.html">
                 <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
             </a>
             <p>本網站為緯育TibaMe前端班第86期學員專題作品，<br>本平台僅供學習、展示之用。</p>
