--- a/takeout.html
+++ b/takeout.html
@@ -97,15 +97,14 @@
     <!-- 中間公告區&Banner開始 -->
     <div id="sliderBoard">
         <ul id="content">
-            <li><img src="./images/takeout_banner.png" class="image"></li>
-            <li><img src="./images/takeout_banner_cup.jpeg" class="image"></li>
-            <li><img src="./images/takeout_banner_san.jpeg" class="image"></li>
+            <!-- <li><img src="./images/takeout_banner_test.jpeg" class="image" alt="朋友聚會首選"></li> -->
+            <li><img src="./images/takeout_banner_staff.jpeg" class="image" alt="親切服務生"></li>
+            <li><img src="./images/takeout_banner_hb.jpeg" class="image" alt="招牌漢堡"></li>
+            <li><img src="./images/takeout_banner_friends.jpeg" class="image" alt="朋友聚會首選"></li>
         </ul>
-        <ul id="contentButton"></ul>
     </div>
-
-    <div id="contentButton">
-    </div>
+    <ul id="contentButton">
+    </ul>
     <div class="description">
         <p>
             內用菜單請點擊 <a href="./food.html">Menu</a>
@@ -351,7 +350,7 @@
     <!-- footer開始 -->
     <footer>
         <div class="footer-pic">
-            <a href="index.html" target="_blank">
+            <a href="index.html">
                 <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
             </a>
             <p>本網站為緯育TibaMe前端班第86期學員專題作品，<br>本平台僅供學習、展示之用。</p>
