fixed tasty-food phone menu pop txt

--- a/food.html
+++ b/food.html
@@ -217,7 +217,46 @@
         </div>
         <div class="phonemenubtn">
             <a href="#">內用菜單
-                <span>hello測試一下</span>
+                <p>無肉不歡拼盤
+                    <i class="fa-solid fa-dollar-sign">990</i>
+                </p>
+                <p>德式綜合香腸
+                    <i class="fa-solid fa-dollar-sign">580</i>
+                </p>
+                <p>綜合炸物拼盤
+                    <i class="fa-solid fa-dollar-sign">770</i>
+                </p>
+                <p>海鮮起司千層
+                    <i class="fa-solid fa-dollar-sign">620</i>
+                </p>
+                <p>鄉村雞鴨拼盤
+                    <i class="fa-solid fa-dollar-sign">880</i>
+                </p>
+                <p>綜合涼拌海鮮
+                    <i class="fa-solid fa-dollar-sign">440</i>
+                </p>
+                <p>經典啤酒組合
+                    <i class="fa-solid fa-dollar-sign">520</i>
+                </p>
+                <p>法式洋蔥湯
+                    <i class="fa-solid fa-dollar-sign">220</i>
+                </p>
+                <p>招牌披薩
+                    <i class="fa-solid fa-dollar-sign">450</i>
+                </p>
+                <p>燉煮小羔羊
+                    <i class="fa-solid fa-dollar-sign">980</i>
+                </p>
+                <p>松露薯條
+                    <i class="fa-solid fa-dollar-sign">580</i>
+                </p>
+                <p>培根奶油寬麵
+                    <i class="fa-solid fa-dollar-sign">620</i>
+                </p>
+                <p>雞肉炒時蔬
+                    <i class="fa-solid fa-dollar-sign">340</i>
+                </p>
+
             </a>
         </div>
         <!-- 彈窗用的 -->
